<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.yegie.tiresize.app.TireSizeActivity"
    android:background="#ccc">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/vertical_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:text="@string/tire_size_enter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TextPrompt"
            android:textSize= "30sp"
            android:gravity="center"
            android:background="#fff"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/tire_size_width"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_gravity="center_horizontal"
                android:background="#fff"
                android:gravity="center" />

            <TextView
                android:text="@string/tire_size_percentage"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:background="#fff"
                android:gravity="center" />

            <TextView
                android:text="@string/tire_size_wheel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/spinner3"
                android:background="#fff"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/test_spinner"
                android:gravity="center"
                android:prompt="@string/spinner_prompt"
                android:entries="@array/width_array"
                android:background="#fefefe"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:focusableInTouchMode="false" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/test_spinner2"
                android:gravity="center"
                android:prompt="@string/spinner_prompt"
                android:entries="@array/ratio_array"
                android:padding="10dp"
                android:background="#fefefe"
                android:layout_marginBottom="10dp"
                android:focusableInTouchMode="false" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/test_spinner3"
                android:gravity="center"
                android:prompt="@string/spinner_prompt"
                android:entries="@array/rim_array"
                android:background="#fefefe"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:focusableInTouchMode="false" />
        </LinearLayout>

        <TextView
            android:text="@string/tire_fav"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TextFav"
            android:layout_marginBottom="1dp"
            android:background="#fff"
            android:gravity="center"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#fff"
            android:id="@+id/listViewFav" />

        <TextView
            android:text="@string/tire_all"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/TextAll"
            android:background="#fff"
            android:gravity="center"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#fff"
            android:id="@+id/listView" />

        <Button
            android:text="@string/more_sizes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/more_stuff"
            android:background="#f5f5f5" />

    </LinearLayout>


</RelativeLayout>
