<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/tire_size_enter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextPrompt"
        android:textSize= "24sp"
        android:gravity="center"
        android:background="#fff"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tire_size_width"
            android:paddingLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:background="#fff" />

        <TextView
            android:text="@string/tire_size_percentage"
            android:paddingLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2"
            android:background="#fff" />

        <TextView
            android:text="@string/tire_size_wheel"
            android:paddingLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/spinner3"
            android:background="#fff"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/test_spinner"
            android:gravity="center"
            android:prompt="@string/spinner_prompt"
            android:entries="@array/width_array"
            android:background="#fefefe"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:focusableInTouchMode="false" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/test_spinner2"
            android:gravity="center"
            android:prompt="@string/spinner_prompt"
            android:entries="@array/ratio_array"
            android:padding="10dp"
            android:background="#fefefe"
            android:layout_marginBottom="10dp"
            android:focusableInTouchMode="false" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/test_spinner3"
            android:gravity="center"
            android:prompt="@string/spinner_prompt"
            android:entries="@array/rim_array"
            android:background="#fefefe"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:focusableInTouchMode="false" />
    </LinearLayout>
</LinearLayout>